# LitHelper

./: .gitignore  LICENSE  lithelper.html  plans.md  process.md  research-rabbit-vs-litmaps-insights.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: author.py  collection.py  monitor.py  paper.py  trail.py  zotero.py
backend/app/routers/: authors.py  citations.py  collections.py  discovery.py  import_export.py  monitors.py  papers.py  search.py  sharing.py  trails.py  zotero.py
backend/app/schemas/: author.py  collection.py  discovery.py  graph.py  monitor.py  paper.py  trail.py
backend/app/services/: citation_graph.py  discovery.py  import_export.py  openalex.py  sharing.py  zotero_service.py
electron/: backend-manager.js  main.js  package-lock.json  package.json  preload.js
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: authors.ts  citations.ts  collections.ts  discovery.ts  importExport.ts  monitors.ts  papers.ts  search.ts  sharing.ts  trails.ts  zotero.ts
frontend/src/components/layout/: AppShell.tsx  (+1 more)
frontend/src/hooks/: useKeyboardShortcuts.ts
frontend/src/pages/: AuthorsPage.tsx  CollectionsPage.tsx  DiscoveryPage.tsx  GraphPage.tsx  MonitorsPage.tsx  SearchPage.tsx  SettingsPage.tsx  TrailsPage.tsx
frontend/src/stores/: useCollectionStore.ts  useDiscoveryStore.ts  useGraphStore.ts  useSearchStore.ts  useThemeStore.ts  useTrailStore.ts
frontend/src/utils/: abstractReconstructor.ts  graphHelpers.ts
scripts/: build-all.sh  dev.sh
(+10 files in other folders)
