[project]
name = "lithelper-backend"
version = "0.1.0"
description = "LitHelper - Literature discovery tool backend"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "eval-type-backport>=0.2.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.13.0",
    "apscheduler>=3.10.0",
    "bibtexparser>=1.4.0,<2.0.0",
    "rispy>=0.9.0",
    "pyzotero>=1.5.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
